--- a/myfile.ini
+++ b/myfile.ini
@@ -1,3 +1,3 @@
 [PRINTER]
-FILENAME: sample.pdf
+FILENAME: https://www.clickdimensions.com/links/TestPDFfile.pdf
 PRINTER_NAME: HP_ENVY_Photo_7800_Orya
