--- a/s3Log.ini
+++ b/s3Log.ini
@@ -1,1 +1,1 @@
-saving to D:\Users\NSyed2\Documents\printer-driver\printer-hack\mydownload\TestPDFfile.pdf
+saving to /Users/nasz/Documents/tray/mydownload/TestPDFfile.pdf
