--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
+altgraph==0.17.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
 configparser==5.2.0
+future==0.18.2
+idna==3.3
+pefile==2021.9.3
+Pillow==9.1.0
 pyinstaller==5.0
 pyinstaller-hooks-contrib==2022.4
 pystray==0.19.3
+pywin32-ctypes==0.2.0
+requests==2.27.1
+six==1.16.0
+urllib3==1.26.9
