--- a/myfile.ini
+++ b/myfile.ini
@@ -1,3 +1,3 @@
 [PRINTER]
 FILENAME: https://www.clickdimensions.com/links/TestPDFfile.pdf
-PRINTER_NAME: HP_ENVY_Photo_7800_Orya
+PRINTER_NAME: HP ENVY Photo 7800 Orya (Local - NSyed2.root.Nasirs-Mac-mini.local )
